--- a/kastapp.css
+++ b/kastapp.css
@@ -1,5 +1,6 @@
 body {
-    background-color: #4B0082 ;
+    background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(50,10,108,1) 35%, rgba(0,212,255,1) 100%);
 }
 
 nav {
@@ -37,33 +38,38 @@ nav ul ol{
     margin-top: -45px;
     margin-left: 0px;
     position: relative;
-    
+}
 
-}
-.laptop {
-    position: relative;
-    top: 75px;
-    left: 0;
-}
 h1 {
     text-align: center;
     margin-top: 120px;
     color: white;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    position: relative;
+    /* position: relative; */
 
+}
+.kast-pic {
+    margin-left: 275px;
+    margin-top: 200px;
+    position: relative;
+    align-items: center;
 }
 .kast-info {
     text-align: center;
-    margin-top: 150px;
+    margin-top: -100px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: white;
     font-size: 14px;
+    font-display: flex;
+    flex-wrap: wrap-reverse;
+
 }
 .join {
     font-size: 20px;
     font-style: bold;
     color: white;
+    position: realtive;
+    text-align: center;
 }
 .button {
     min-width: 215px;
@@ -74,15 +80,18 @@ h1 {
     border:10px solid orange;
     border-radius: 3px;
     text-transform: uppercase;
-    margin-left: 660px;
-    margin-top: 10px;
+    margin-left: 375px;
+    /* margin-top: 10px; */
     padding: 0px 40px;
-    position: relative;
+    /* position: relative; */
     font-weight: 700;
     text-align: center;
     object-fit: fill;
 }
 .featured {
+    text-align: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
     background-color: white;
     height: 400px;
 }
@@ -97,9 +106,83 @@ h1 {
     position: relative;
 
 }
-.logo {
-    flex-flow: column wrap;
-    margin-left: 100px;
+.logo1 {
+    order: 1;
+    align-self: flex-start;
+}
+.logo2 {
+    order: 2;
+    align-self: flex-start;
+}
+.logo3 {
+    order: 3;
+    align-self: flex-start;
+}
+.logo4 {
+    order: 4;
+    align-self: flex-end;
+}
+.logo5 {
+    order: 5;
+    align-self: flex-end;
+}
+.logo6 {
+    order: 6;
+    align-self: flex-end;
+}
+.box {
     position: relative;
-    
+    margin-top: 25px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    flex-flow: row;
+}
+#logo2 {
+    top: 120px;
+    left: 600px;
+}
+#logo1 {
+    left: -400px;
+}
+.yahooquote {
+    position: relative;
+    margin-top: 200px;
+    margin-left: 200px;
+    color: grey;
+    font-style: italic;
+    font-size: 16px;
+    font-family: 'Times New Roman', Times, serif;
+}
+#finance {
+    position: relative;
+    margin-left: 300px;
+    font-style: italic;
+    font-size: 12px;
+    color: grey;
+    font-family: 'Times New Roman', Times, serif;
+}
+.whatis {
+    background-color: lightseagreen;
+    height: 300px;
+
+}
+.whatkast {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
+    color: white;
+
+}
+.explain {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: white;
+    font-size: medium;
+    text-align: center;
+   
+}
+#button2 {
+    position: relative;
+    top: 20px;
 }
